TEST_PROGRAMS/INVALID/09/blank_println.go
package blank_println

func main() {
    print(_);
}
